--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,13 +7,13 @@ spam_cant_msg: 5
 
 parse_mode: 'Markdown' # Experimental. Do not change unless you know what you are doing. Options: Markdown/MarkdownV2/HTML
 
-allow_private: false # Allow / disallow option for staff to chat privately
-direct_reply: false # Set this to true to just forward staff users to a user chat when allow_private
-auto_close_tickets: true # Close tickets after answering
+allow_private: true # Allow / disallow option for staff to chat privately
+direct_reply: true # Set this to true to just forward staff users to a user chat when allow_private
+auto_close_tickets: false # Close tickets after answering
 anonymous_tickets: true # Include userid in tickets or not
 anonymous_replies: true # Include staff member name in response
 show_auto_replied: false # Send auto replied msgs to staff chat
-show_user_ticket: false # Show ticket id to user
+show_user_ticket: true # Show ticket id to user
 autoreply_confirmation: true # Reply with language.confirmationMessage on each incoming message
 clean_replies: false # Remove footer and header from response
 pass_start: false # Pass /start command to support directly
@@ -24,7 +24,7 @@ signal_number: '+12345689' # Your signal number / account
 web_server: false # Enable/disable web server
 web_server_port: 8080 # Port for web server
 
-dev_mode: true # Enable/disable dev mode
+dev_mode: false # Enable/disable dev mode
 
 # customize your language
 language:
@@ -72,43 +72,44 @@ language:
   textFirst: 'Please send us a message before sending an image so that we can help you better.'
   ticketClosedError: 'You cannot reply to a closed ticket.'
   automatedReply: 'This is an automated reply.'
-  automatedReplyAuthor: 'BottyBot.'
+  automatedReplyAuthor: 'MXCBot.'
   doesntHelp: 'This does not help.'
   automatedReplySent: 'Automated reply was send to the user.'
   ticketReopened: 'Ticket reopened.'
-  regardsGroup: 'Botty Group'
+  regardsGroup: 'MXC DAO Support'
 
 autoreply:
-  - question: 'working'
-    answer: "To report a bug, you can use the following link: \
-      [Bug report](https://github.com/bostrot/telegram-support-bot/wiki/Getting-started)  \
-      Alternatively you can create a ticket here."
+  - question: 'not'
+    answer: "To report a bug, you can create a ticket here. Just put any screenshot or take a picture would be ok!"
   - question: 'are you sure?'
     answer: 'Yes.'
+
+
 categories:
- - name: "M2Pro"
+  - name: "M2Pro"
     subgroups:
     - name: "F&Q"
-      group_id: "-12345678910"
+      group_id: "-910551710"
     - name: "Problem"
-      group_id: "-12345678910"
+      group_id: "-910551710"
     - name: "Suggestion"
-      group_id: "-12345678910"
+      group_id: "-910551710"
+
   - name: "Neo"
     subgroups:
     - name: "F&Q"
-      group_id: "-12345678910"
+      group_id: "-910551710"
     - name: "Problem"
-      group_id: "-12345678910"
+      group_id: "-889923077"
     - name: "Suggestion"
-      group_id: "-12345678910"
+      group_id: "-910551710"
   - name: "ISO"
-    group_id: "-12345678910"
+    group_id: "-910551710"
   - name: "NFT"
-    group_id: "-12345678910"
+    group_id: "-910551710"
   - name: "Other issues"
     tag: "#other"
     msg: "Please specify your order number and describe the problem in as much detail as possible"
-    group_id: "-12345678910"
+    group_id: "-910551710"
   - name: "Contact"
     msg: "Check out our Website [here](https://wannsee.mxc.com/docs/intro)"
